[project]
name = "comfyui-japanese-romaji"
version = "1.0.0"
description = "ComfyUI custom node to convert Japanese text in prompts to Hepburn romaji for LTX-2.3 speech generation"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = ["fugashi", "unidic-lite"]

[project.optional-dependencies]
pykakasi = ["pykakasi>=2.2.1"]

[project.urls]
Repository = "https://github.com/hirokazu/ComfyUI-JapaneseRomaji"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.comfy]
PublisherId = "hiroqazu"
DisplayName = "ComfyUI Japanese Romaji Converter"
